--- a/src/pages/blog/miert-lassu-a-wordpress-oldalam.astro
+++ b/src/pages/blog/miert-lassu-a-wordpress-oldalam.astro
@@ -33,7 +33,7 @@ const publishDate = "2025-01-31";
     <nav class="mb-8 text-sm text-neutral-600">
       <a href="/" class="hover:text-neutral-900">Főoldal</a>
       <span class="mx-2">/</span>
-      <a href="/blog" class="hover:text-neutral-900">Blog</a>
+      <a href="/blog/" class="hover:text-neutral-900">Blog</a>
       <span class="mx-2">/</span>
       <span class="text-neutral-900">Miért lassú a WordPress oldalam?</span>
     </nav>
