--- a/src/pages/rolam.astro
+++ b/src/pages/rolam.astro
@@ -14,6 +14,13 @@ const structuredData = {
   'telephone': '+36202826843',
   'email': 'hello@leventestudio.app',
   'url': 'https://leventestudio.app',
+  'image': 'https://leventestudio.app/levente_studio_portrait_final.webp',
+  'logo': {
+    '@type': 'ImageObject',
+    'url': 'https://leventestudio.app/logo.png',
+    'width': 512,
+    'height': 512
+  },
   'address': {
     '@type': 'PostalAddress',
     'addressCountry': 'HU'
