--- a/src/pages/blog/mikor-erdemes-weboldal-auditot-kerni.astro
+++ b/src/pages/blog/mikor-erdemes-weboldal-auditot-kerni.astro
@@ -5,9 +5,28 @@ import { SEO } from 'astro-seo';
 const title = "Mikor érdemes weboldal auditot kérni – és mikor felesleges?";
 const description = "Weboldal audit nem mindenkinek való. Nézd meg, mikor van itt az ideje egy technikai auditnak, és mikor felesleges költés. Konkrét jelekkel.";
 const publishDate = "2025-01-31";
+
+const structuredData = {
+  '@context': 'https://schema.org',
+  '@type': 'Article',
+  'headline': title,
+  'description': description,
+  'datePublished': publishDate,
+  'author': {
+    '@type': 'Person',
+    'name': 'Levente Csurka',
+    'url': 'https://leventestudio.app',
+    'logo': {
+      '@type': 'ImageObject',
+      'url': 'https://leventestudio.app/logo.png',
+      'width': 512,
+      'height': 512
+    }
+  }
+};
 ---
 
-<BaseLayout>
+<BaseLayout structuredData={structuredData}>
   <SEO
     slot="head"
     title={title}
@@ -20,7 +39,7 @@ const publishDate = "2025-01-31";
       },
       article: {
         publishedTime: publishDate,
-        authors: ["Levente Fekete"],
+        authors: ["Levente Csurka"],
       }
     }}
     twitter={{
