--- a/src/pages/esettanulmanyok.astro
+++ b/src/pages/esettanulmanyok.astro
@@ -15,7 +15,13 @@ const structuredData = {
   'provider': {
     '@type': 'Person',
     'name': 'Levente Csurka',
-    'jobTitle': 'Weboldal Audit Szakértő'
+    'jobTitle': 'Weboldal Audit Szakértő',
+    'logo': {
+      '@type': 'ImageObject',
+      'url': 'https://leventestudio.app/logo.png',
+      'width': 512,
+      'height': 512
+    }
   }
 };
 ---
