--- a/src/pages/kapcsolat.astro
+++ b/src/pages/kapcsolat.astro
@@ -16,7 +16,13 @@ const structuredData = {
     '@type': 'Person',
     'name': 'Levente Csurka',
     'telephone': '+36202826843',
-    'email': 'hello@leventestudio.app'
+    'email': 'hello@leventestudio.app',
+    'logo': {
+      '@type': 'ImageObject',
+      'url': 'https://leventestudio.app/logo.png',
+      'width': 512,
+      'height': 512
+    }
   }
 };
 ---
