--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import AuditCTA from '../components/AuditCTA';
 import AboutExpert from '../components/AboutExpert';
 import HowIWork from '../components/HowIWork';
 import CaseStudies from '../components/CaseStudies';
+import CommonProblems from '../components/CommonProblems';
 import ForWhom from '../components/ForWhom';
 import FAQ from '../components/FAQ';
 import Contact from '../components/Contact';
@@ -78,6 +79,7 @@ const structuredData = {
     <AboutExpert client:load />
     <HowIWork client:load />
     <CaseStudies client:load />
+    <CommonProblems client:load />
     <ForWhom client:load />
     <FAQ client:load />
     <Contact client:load />
