--- a/src/pages/esettanulmanyok.astro
+++ b/src/pages/esettanulmanyok.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import HeaderAstro from '../components/HeaderAstro.astro';
-import CaseStudiesPage from './CaseStudiesPage';
+import CaseStudies from '../components/CaseStudies';
 import Footer from '../components/Footer';
 import CookieBanner from '../components/CookieBanner';
 import MobileStickyBar from '../components/MobileStickyBar';
@@ -37,7 +37,7 @@ const structuredData = {
 
   <div class="min-h-screen bg-white">
     <HeaderAstro />
-    <CaseStudiesPage client:load />
+    <CaseStudies client:load />
     <Footer client:load />
   </div>
 </BaseLayout>
