--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -93,6 +93,11 @@ const fullOgImage = ogImage.startsWith('http') ? ogImage : `${siteUrl}${ogImage}
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-WZHLTWBD');
     </script>
+
+    <!-- Scroll Tracking -->
+    <script>
+      import '../scripts/scroll-tracking';
+    </script>
   </head>
   <body>
     <!-- GTM noscript -->
