--- a/src/pages/blog/google-search-console-hibak.astro
+++ b/src/pages/blog/google-search-console-hibak.astro
@@ -15,6 +15,11 @@ const structuredData = {
   'author': {
     '@type': 'Person',
     'name': 'Levente Csurka',
+    'url': 'https://leventestudio.app'
+  },
+  'publisher': {
+    '@type': 'Organization',
+    'name': 'Levente Stúdió',
     'url': 'https://leventestudio.app',
     'logo': {
       '@type': 'ImageObject',
@@ -22,6 +27,16 @@ const structuredData = {
       'width': 512,
       'height': 512
     }
+  },
+  'mainEntityOfPage': {
+    '@type': 'WebPage',
+    '@id': 'https://leventestudio.app/blog/google-search-console-hibak/'
+  },
+  'image': {
+    '@type': 'ImageObject',
+    'url': 'https://leventestudio.app/og-image.jpg',
+    'width': 1200,
+    'height': 630
   }
 };
 ---
